# WV-Net

./: .gitignore  README.md  pyproject.toml  requirements.txt
assets/: sample_data.csv  valid_embs.npy
notebooks/: model_loading.ipynb
wvnet/: data_utils.py  model_utils.py
